# food-image-classification-model

./: .gitignore  Dockerfile  Dockerfile.data.dev  Dockerfile.model.dev  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/data_dev/: devcontainer.json
.devcontainer/model_dev/: devcontainer.json
data/: food101-mappings.json  food101-train-mappings.json  food101-validation-mappings.json
src/: base-model.ipynb  byte_to_jpg.py  contrast-bg.ipynb  data-script.py  data.ipynb  eval-models.ipynb  fetch-data-script.py  mod-model.ipynb  model-dev.ipynb  model.py  nobg-model.ipynb  remove_background.py  results.json  sorting.ipynb
src/archive/: base-model-old.ipynb  process_data.ipynb  remove_background.ipynb
