[project]
name = "ds340-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy<=2.0.0",
    "onnxruntime-gpu>=1.20.0",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "polars>=1.14.0",
    "pyarrow>=18.0.0",
    "rembg[gpu]>=2.0.59",
    "ruff>=0.7.4",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.33",
]

[tool.pyright]
include = ["src"]

[tool.ruff]
include = ["pyproject.toml"]
